- The platform thehoodup now waits for credentials.
- Added the sina.com email provider to mailfy.py.
- Added a message to urge the users to report any issue to <https://github.com/i3visio/osrframework/issues>.
- Added a message in mailfy.py when being run under Windows systems to let them know that the app. may behave unexpectedly.
- Corrected a mistake related to matplotlib.

0.9.10, 2015/10/26 -- Updated the error messages of burbuja.info in response to issue #32.
- Fixed in the burbuja platform which were confirmed to be working wrongly.
- Updated a new ebay error message just to try to confirm the reported malfunctioning by some users.
- Temporally deactivation of jamiiforums platform to try to fix this issue further.
- Throwing a Warning message when using Twitter API with old versions of ouath library.

0.9.9, 2015/10/18 -- Updated the number of email accounts that con be searched with mailfy.py.
- We have added a series of email providers in which the emailahoy library is also working:  "yeah.net".
- Added badges to the README.md file.

0.9.8, 2015/10/15 -- Updated the number of email accounts that con be searched with mailfy.py.
- We have added a series of email providers in which the emailahoy library is also working:  "126.com", "163.com", "189.cn", "foxmail.com", "qq.com", "yandex.com".

0.9.7, 2015/09/29 -- Updated the enumeration.py file and corrected the slashdot wrapper.
- Corrected the slashdot wrapper which was showing the existence of platforms which in fact didn't exist.
- Commented some references to an old logger in enumeration.py.

0.9.6, 2015/09/22 -- Corrected some installations misconfigurations.
- Fixed an issue when creating the twitter_api which now will try to grab the api_key in compilation time.
- A .csv file will be created by default now in usufy, entify, searchfy, mailfy and phonefy.
- Added a dependency for networkx in requirements.txt.
- Fixes in the installation instructions.
