@@ -37,7 +37,9 @@ __email__ = "contacto@i3visio.com"
 import argparse
 import json
 import os
+import sys
 
+import osrframework.utils.banner as banner
 import osrframework.utils.platform_selection as platform_selection
 import osrframework.utils.general as general
 # From emailahoy code
@@ -231,6 +233,8 @@ def main(args):
 This program comes with ABSOLUTELY NO WARRANTY.
 This is free software, and you are welcome to redistribute it under certain conditions. For additional info, visit <http://www.gnu.org/licenses/gpl-3.0.txt>."""
     if not args.quiet:
+        print banner.text
+
         print sayingHello
         print
 
